# api-django-ninja

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
config/: api.py  env.py  settings.py  urls.py
modules/dashboard/: api.py
modules/dashboard/schemas/: __init__.py  count_rural_producers_schema.py  get_farms_by_crop_schema.py  get_farms_by_state_schema.py  get_total_farms_area_schema.py  get_total_land_use_schema.py
modules/dashboard/services/: __init__.py  get_farms_by_crop_service.py  get_farms_by_state_service.py  get_total_land_use_service.py
modules/rural_producers/: admin.py  api.py  models.py
modules/rural_producers/migrations/: 0001_initial.py  0002_alter_ruralproducers_cultivated_crops.py  0003_alter_ruralproducers_cultivated_crops.py  0004_alter_ruralproducers_cpf_or_cnpj_and_more.py
modules/rural_producers/schemas/: __init__.py  rural_producer_create_schema.py  rural_producer_patch_schema.py  rural_producer_schema.py
modules/rural_producers/services/: __init__.py  count_rural_producers_service.py  create_rural_producers_service.py  delete_rural_producer_service.py  get_by_id_rural_producer_service.py  get_many_rural_producers_service.py  get_rural_producer_by_crop_service.py  get_total_farms_arable_area_service.py  get_total_farms_area_service.py  get_total_farms_vegetation_area_service.py  update_rural_producer_service.py
src/rural_producers/: apps.py
